--- a/CG.ScreenSaver.WinWpf/App.xaml
+++ b/CG.ScreenSaver.WinWpf/App.xaml
@@ -1,10 +1,8 @@
 ﻿<Application x:Class="CG.ScreenSaver.WinWpf.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:CG.ScreenSaver.WinWpf"
-             StartupUri="MainWindow.xaml"
-    xmlns:System="clr-namespace:System;assembly=System.Runtime">
+             Startup="App_OnStartup">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
